--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>SQLite app</title>
+  
+></script>
 </head>
 
 <body>
